Fix color and wrapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -819,7 +819,7 @@ footer {
     margin-bottom: 15px;
     display: block;
     margin-left: 70px;
-    color: #73d695;
+    color: #e84b43;
   }
   .vtimeline-icon {
     margin-left: 0;
@@ -959,6 +959,8 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -979,6 +981,7 @@ a.button {
   border: 2px solid #e84b43;
   border-radius: 15px;
   text-decoration: none;
+  white-space: nowrap;
   margin: 1em;
   margin-top: 0;
   -webkit-box-flex: 1;
